SERVER-72106 Use user-defined collation for DuplicateKey error in clustered collection