src/mongo/db/storage/wiredtiger/wiredtiger_record_store.cpp
@@ -1369,23 +1369,19 @@ Status WiredTigerRecordStore::_insertRecords(OperationContext* opCtx,
             invariant(!_overwrite);
             invariant(_keyFormat == KeyFormat::String);
 
-            DuplicateKeyErrorInfo::FoundValue foundValueObj;
+            BSONObj foundValueObj;
             if (TestingProctor::instance().isEnabled()) {
                 WT_ITEM foundValue;
                 invariantWTOK(c->get_value(c, &foundValue), c->session);
-
-                foundValueObj.emplace<BSONObj>(reinterpret_cast<const char*>(foundValue.data));
+                foundValueObj = BSONObj(reinterpret_cast<const char*>(foundValue.data));
             }
 
-            // Generate a useful error message that is consistent with duplicate key error messages
-            // on indexes.
-            BSONObj obj = record_id_helpers::toBSONAs(record.id, "");
-            return buildDupKeyErrorStatus(obj,
-                                          NamespaceString(ns()),
-                                          "" /* indexName */,
-                                          BSON("_id" << 1),
-                                          BSONObj() /* collation */,
-                                          std::move(foundValueObj));
+            return Status{DuplicateKeyErrorInfo{BSONObj(),
+                                                BSONObj(),
+                                                BSONObj(),
+                                                std::move(foundValueObj),
+                                                std::move(record.id)},
+                          "Duplicate cluster key found"};
         }
 
         if (ret)
